src/components/Event/EventListItem.scss
@import "../../assets/styles/colors.scss";

.event-list-item {
  &__outer-container {
    justify-content: center;
  }

  position: relative;
  width: 100%;

  img {
    width: 100%;
    height: 100%;
    min-height: 100vh;
    filter: brightness(0.5);
  }

  &__content {
    position: absolute;
    display: flex;
    align-items: flex-start;
    flex-wrap: wrap;
    top: 25%;
    width: 50%;
    margin-left: 72px;

    &-hosted-by {
      width: 100%;
      margin-bottom: 20px;
    }

    h1 {
      white-space: pre-line;
      font-size: 48px;
      line-height: 52px;
      margin-bottom: 20px;
      width: 100%;
    }

    h2 {
      font-size: 32px;
      line-height: 36px;
      white-space: pre-wrap;
    }

    h3 {
      font-size: 20px;
      line-height: 24px;
    }

    p {
      width: 100%;
    }

    &-description {
      white-space: pre-wrap;
      margin-top: 20px;
    }

    .btn {
      margin-top: 40px;
      width: 200px;

      &:first-of-type {
        margin-right: 20px;
      }
    }
  }
}

@media (max-width: 1040px) {
  .event-list-item {
    img {
      max-height: 100vh;
      min-height: auto;
    }

    .image-placeholder {
      height: 565px;
    }

    &__content {
      display: flex;
      width: 100%;
      flex-wrap: wrap;
      padding: 44px 36px;
      justify-content: center;
      max-height: 100%;
      top: 0;
      right: 0;
      overflow: scroll;

      &-date {
        width: 100%;
      }

      h1 {
        width: 100%;
        display: flex;
        font-size: 40px;
        line-height: 44px;
      }
    }
  }
}

@media (max-width: 767px) {
  .event-list-item {
    &__content {
      padding-top: 24px;

      h1 {
        margin-bottom: 12px;
      }

      &-hosted-by {
        margin-bottom: 12px;
      }
    }
  }
}

